--- a/src/styles/_welcomePage.scss
+++ b/src/styles/_welcomePage.scss
@@ -52,6 +52,7 @@ opacity: 0;
   background-color: $lightartificialgreen;
   border: 15px solid $red;
   border-radius: 25px;
+  cursor: pointer;
   p {
     padding: 0 50px;
     font-size: 5rem;
